--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
 body {
     text-align: center;
 }
+
+.win-container {
+/*     transform: translate(-50%, -50%);
+       width:300px;
+        height:300px; */
+         border-radius: 2px;
+         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+         font-family: 'Press Start 2P', cursive;
+          display: none;
+      align-items: center;
+      position:absolute;
+left:0;
+right:0;
+margin-left:auto;
+width:300px;
+margin-right:auto;
+background-color: #000;
+color: #FFF;
+z-index:5;
+margin-bottom: -500px;
+}
+
+.is-visible {
+	display: block !important;
+}
+
+P { 
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
